# secret-portal

./: README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
secret_portal/: cli.py
tests/: test_no_leak.py
